--- a/client/src/old/components/body/bottom-body/main-panel/screen/style.scss
+++ b/client/src/old/components/body/bottom-body/main-panel/screen/style.scss
@@ -1,9 +1,9 @@
-#screen{
-  background: #cdcdcd;
+#screen {
+  background: #f7f7f7;
 }
-#screen-heading{
+#screen-heading {
   text-align: center;
   font-weight: bold;
-  border-bottom: 2px solid;
-  background: #ffd8b1;
+  // border-bottom: 2px solid;
+  background: #efefef;
 }
