--- a/client/src/old/components/body/upper-body/top-panel/map/style.scss
+++ b/client/src/old/components/body/upper-body/top-panel/map/style.scss
@@ -1,19 +1,19 @@
-#map-input{
+#map-input {
   display: none;
 }
-#map-label{
+#map-label {
   display: block;
-  border: 1px solid #ddd;
+  // border: 1px solid #ddd;
   background: #ccc;
   padding: 5px;
   cursor: pointer;
-  &:hover{
+  &:hover {
     background: #a3a3a3;
   }
-  &:active{
+  &:active {
     background: #b7b7b7;
   }
-  .map-icon{
+  .map-icon {
     width: 1em;
   }
 }
