--- a/client/src/styles/floatbox.scss
+++ b/client/src/styles/floatbox.scss
@@ -1,37 +1,37 @@
-#context-menu{
-  display:none;
-  position:fixed;
+#context-menu {
+  display: none;
+  position: fixed;
   z-index: 2;
-  border:1px solid #B2B2B2;
-  width:150px;
-  background:#F9F9F9;
-  box-shadow: 3px 3px 2px #E9E9E9;
-  border-radius:4px;
+  // border:1px solid #B2B2B2;
+  width: 150px;
+  background: #f9f9f9;
+  box-shadow: 3px 3px 2px #e9e9e9;
+  border-radius: 4px;
 }
-#node-details{
-  list-style:none;
-  margin:0px;
-  margin-top:4px;
-  padding-left:10px;
-  padding-right:10px;
-  padding-bottom:3px;
-  font-size:17px;
+#node-details {
+  list-style: none;
+  margin: 0px;
+  margin-top: 4px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 3px;
+  font-size: 17px;
   color: #333333;
-  >hr{
+  > hr {
     width: 85%;
-    background-color:#E4E4E4;
-    border-color:#E4E4E4;
-    color:#E4E4E4;
+    background-color: #e4e4e4;
+    border-color: #e4e4e4;
+    color: #e4e4e4;
   }
-  >li{
+  > li {
     padding: 3px;
-    padding-left:10px;
+    padding-left: 10px;
     word-break: break-all;
     cursor: default;
-    &:hover{
+    &:hover {
       color: white;
-      background:#284570;
-      border-radius:2px;
+      background: #284570;
+      border-radius: 2px;
     }
   }
 }
