--- a/client/src/styles/scaffold.scss
+++ b/client/src/styles/scaffold.scss
@@ -1,144 +1,169 @@
-body{
+body {
   position: absolute;
   width: 100%;
   height: 100%;
   margin: 0;
 }
-#pathfinder{
+#pathfinder {
   background: #fff;
 }
-#header{
-  border-bottom: 1px solid;
-  background: aliceblue;
-  padding: 2px 10px;
-  min-height: 25px;
-}
-#menu{
+// #header {
+//   padding: 2px 10px;
+//   min-height: 25px;
+// }
+#menu {
   position: absolute;
   z-index: 1;
 }
-#header h3{
+// #header h3 {
+// margin: 0;
+// display: flex;
+// align-items: center;
+// height: 100%;
+// justify-content: center;
+// position: absolute;
+// width: 100%;
+// text-align: center;
+// }
+
+#footer {
+  // border-top: 1px solid;
+  background: #ffffff;
+  // padding: 2px 10px;
+}
+
+#footer p {
   margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  width: 100%;
-  text-align: center;
 }
-
-#footer{
-  border-top: 1px solid;
-  background: aliceblue;
-  padding: 2px 10px;
-}
-
-#footer p{
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#footer .footer-credits{
+#footer .footer-credits {
   justify-content: space-between;
 }
-.linkedin-icon{
+.linkedin-icon {
   width: 1em;
   position: relative;
   top: 5px;
 }
-.github-icon{
+.github-icon {
   width: 1em;
   position: relative;
   top: 5px;
 }
-#pathfinder{
+#pathfinder {
   position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
   flex-flow: column nowrap;
 }
-#header{
-  flex: 1;
-}
-#body{
+// #header {
+//   flex: 1;
+// }
+#body {
   flex: 18;
   display: flex;
   flex-flow: column nowrap;
 }
-#footer{
-  flex: 1;
-}
 
-#upper-body{
-  flex: 1;
-}
-#bottom-body{
+// #footer {
+// flex: 1;
+// }
+
+// #upper-body {
+//   flex: 1;
+// }
+#bottom-body {
   flex: 11;
   display: flex;
   flex-flow: row nowrap;
 }
-#main-panel{
+#main-panel {
   flex: 9;
-  border: 2px solid;
+  // border: 2px solid;
 }
-#side-panel{
+#side-panel {
   flex: 3;
-  border: 2px solid;
+  // border: 2px solid;
 }
-#upper-body,#lower-body{
-  padding: 5px;
-}
+// #upper-body,
+// #lower-body {
+// padding: 5px;
+// }
 
-.btn-with-title{
-  margin: 0 2px;
+.btn-with-title {
+  margin: 0 6px;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
   flex-direction: column;
-}
-.btn-title{
-  font-size: 12px;
-  display: inline-block;
-  margin: 0 auto;
-  width: 45px;
-  word-wrap: break-word;
-  text-align: center;
+  > button {
+    border: none;
+    padding: 8px;
+  }
+  > span {
+    font-size: 12px;
+    display: inline-block;
+    margin: 0 auto;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: center;
+    overflow: hidden;
+    width: 100%;
+  }
 }
 
-#playback-controls,#breakpoints,#comparator,#camera-controls{
+#playback-controls,
+#breakpoints,
+#comparator,
+#camera-controls {
   display: inline-flex;
   vertical-align: top;
   margin: 0 10px;
 }
-#play,#pause,#stop,#step-backward,#step-forward,#bp-btn,#cp-btn,#fit-map,#fit-debugger,#fit-scale,#tt-btn{
+#play,
+#pause,
+#stop,
+#step-backward,
+#step-forward,
+#bp-btn,
+#cp-btn,
+#fit-map,
+#fit-debugger,
+#fit-scale,
+#tt-btn {
   height: 25px;
   width: 30px;
   border-radius: 5px;
   cursor: pointer;
   margin: 0 7px;
 }
-#fit-map,#fit-debugger,#fit-scale{
+#fit-map,
+#fit-debugger,
+#fit-scale {
   position: relative;
 }
 
-#map{
+#map {
   display: inline-block;
   margin: 0 5px;
 }
-#algorithm{
+#algorithm {
   display: inline-block;
   margin: 0 5px;
 }
 
-#screen{
+#screen {
   width: 100%;
   height: 100%;
 }
 
-#side-panel{
+#side-panel {
   position: relative;
 }
-#events-list{
+#events-list {
   position: absolute;
   height: 100%;
   width: 100%;
