--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   overflow: hidden;
   margin: 0;
@@ -6,11 +13,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 @media (pointer: fine) {
@@ -47,4 +49,9 @@ code {
   *::-webkit-scrollbar-thumb {
     background: #888888;
   }
+}
+
+#pathfinder {
+  position: "fixed";
+  top: 100vh;
 }
