Significant changes to UI

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,14 @@
+* {
+  transition-property: background-color;
+  transition-duration: 0.3s;
+}
 html,
 body,
 #root {
   width: 100%;
   height: 100%;
+  user-select: none;
+  overflow: hidden;
 }
 
 body {
