--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,7 @@
-* {
-  transition-property: background-color;
-  transition-duration: 0.3s;
-}
 html,
 body,
 #root {
+  background-color: #1c2128;
   width: 100%;
   height: 100%;
   user-select: none;
