--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 html,
 body,
 #root {
-  background-color: #1c2128 !important;
+  background-color: #0a0c10 !important;
   width: 100%;
   height: 100%;
   user-select: none;
