--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,6 @@ code {
 
 .icon-glyph {
   background: red;
-  font-family: "Arial", sans-serif; /* You can use any font */
   font-size: 20px;
   color: black;
   display: flex;
@@ -41,10 +40,10 @@ code {
   width: 20px;
   height: 20px;
   border-radius: 100%;
+  transform: translateX(50%);
 }
 .icon-glyph::before {
-  content: "!"; /* Unicode character e009 */
-  font-family: "Arial", sans-serif; /* Make sure it's using a font that supports it */
+  content: "!";
 }
 .error-text {
   background: #483736;
