Highly experimental: Improve loading performance and memory usage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,8 +18,9 @@ body,
   height: 100%;
   user-select: none;
   overflow: hidden;
-  font-family: "Inter", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", "Arial", sans-serif !important;
+  font-family:
+    "Inter", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", "Arial", sans-serif !important;
 }
 
 body {
